content/products/stash/0.6.0/reference/stash.md
---
title: Stash
menu:
  product_stash_0.6.0:
    identifier: stash
    name: Stash
    parent: reference
    weight: 0
product_name: stash
menu_name: product_stash_0.6.0
section_menu_id: reference
aliases:
- /products/stash/0.6.0/reference/
info:
  version: 0.6.0
---

## stash

Stash by AppsCode - Backup your Kubernetes Volumes

### Synopsis


Stash is a Kubernetes operator for restic. For more information, visit here: https://appscode.com/products/stash

### Options

```
      --alsologtostderr                  log to standard error as well as files
      --analytics                        Send analytical events to Google Analytics (default true)
  -h, --help                             help for stash
      --log_backtrace_at traceLocation   when logging hits line file:N, emit a stack trace (default :0)
      --log_dir string                   If non-empty, write log files in this directory
      --logtostderr                      log to standard error instead of files
      --stderrthreshold severity         logs at or above this threshold go to stderr (default 2)
  -v, --v Level                          log level for V logs
      --vmodule moduleSpec               comma-separated list of pattern=N settings for file-filtered logging
```

### SEE ALSO
* [stash backup](/products/stash/0.6.0/reference/stash_backup)	 - Run Stash Backup
* [stash check](/products/stash/0.6.0/reference/stash_check)	 - Check restic backup
* [stash recover](/products/stash/0.6.0/reference/stash_recover)	 - Recover restic backup
* [stash run](/products/stash/0.6.0/reference/stash_run)	 - Run Stash operator
* [stash version](/products/stash/0.6.0/reference/stash_version)	 - Prints binary version number.

